[package]
name = "n18-interceptor"
version = "0.1.0"
authors = ["Asen Mihaylov <asen.mihaylov@wpxhosting.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
itertools = "0.10.0"
rayon = "1.5.0"
native-dialog = "0.5.5"
serde = { version="1.0", features=[ "derive" ] }
quick-xml = { version = "0.22.0", features = [ "serialize" ] }
rust_decimal = "1.11.0"
regex = "1.4.5"

